Updates java/thread.md
Auto commit by GitBook Editor