@@ -147,7 +147,8 @@ for(Annotation annotation : annotations){
 * 享元模式：String常量池、Integer.valueOf\(int i\)、Character.valueOf\(char c\)
 * 迭代器模式：Iterator
 * 职责链模式：ClassLoader的双亲委派模型
-* 解释器模式：正则表达式java.util.regex.Pattern
+* ## 解释器模式：正则表达式java.util.regex.Pattern
+
 
 ---
 
@@ -174,4 +175,59 @@ Segment虽保留，但已经简化属性，仅仅是为了兼容旧版本。
 底层结构存放的是TreeBin对象，而不是TreeNode对象；
 
 CAS作为知名无锁算法，那ConcurrentHashMap就没用锁了么？当然不是，当hash值与链表的头结点相同还是会synchronized上锁，锁链表。
+
+---
+
+### **i++在多线程环境下是否存在问题，怎么解决？**
+
+虽然递增操作++i是一种紧凑的语法，使其看上去只是一个操作，但这个操作并非原子的，因而它并不会作为一个不可分割的操作来执行。实际上，它包含了三个独立的操作：读取count的值，将值加1，然后将计算结果写入count。这是一个“读取 - 修改 - 写入”的操作序列，并且其结果状态依赖于之前的状态。所以在多线程环境下存在问题。
+
+要解决自增操作在多线程环境下线程不安全的问题，可以选择使用Java提供的原子类，如AtomicInteger或者使用synchronized同步方法。
+
+---
+
+### **new与newInstance\(\)的区别**
+
+* new是一个关键字，它是调用new指令创建一个对象，然后调用构造方法来初始化这个对象，可以使用带参数的构造器
+* newInstance\(\)是Class的一个方法，在这个过程中，是先取了这个类的不带参数的构造器Constructor，然后调用构造器的newInstance方法来创建对象。
+
+  Class.newInstance\(\)不能带参数，如果要带参数需要取得对应的构造器，然后调用该构造器的Constructor.newInstance\(Object ... initargs\)方法
+
+
+---
+
+### **你了解哪些JDK1.8的新特性？**
+
+* 接口的默认方法和静态方法
+
+  JDK8允许我们给接口添加一个非抽象的方法实现，只需要使用default关键字即可，也可以定义被static修饰的静态方法
+
+* 对HashMap进行了改进，当单个桶的元素个数大于6时就会将实现改为红黑树实现，以避免构造重复的hashCode的攻击
+* 多并发进行了优化。如ConcurrentHashMap实现由分段加锁、锁分离改为CAS实现。
+* JDK8拓宽了注解的应用场景，注解几乎可以使用在任何元素上，并且允许在同一个地方多次使用同一个注解
+* Lambda表达式
+
+---
+
+### 你用过哪些JVM参数？
+
+-Xms 堆最小值
+
+-Xmx 堆最大值
+
+-Xmn: 新生代容量
+
+-XX:SurvivorRatio 新生代中Eden与Surivor空间比例
+
+-Xss 栈容量
+
+-XX:PermSize 方法区初始容量
+
+-XX:MaxPermSize 方法区最大容量
+
+-XX:+PrintGCDetails 收集器日志参数
+
+
+
+
 
